1. Cleaned up code, fixed a large amount of warnings, lint errors and deprecations 2. Update AGP to 9.1.1, Gradle 9.3.1 3. Change ijkplayer library to https://github.com/debugly/ijkplayer 4. Change ExoPlayer to Media3 ExoPlayer 1.10.1 5. Switch to Kotlin DSL